[package]
name = "lalrproc"
version = "0.0.5"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Procedural macro built on LALRPOP"
repository = "https://github.com/dtolnay/lalrproc"
documentation = "https://github.com/dtolnay/lalrproc"
build = "build.rs"

[lib]
proc-macro = true

[build-dependencies]
lalrpop = "0.16"

[dependencies]
lalrpop-util = "0.16"

[badges]
travis-ci = { repository = "dtolnay/lalrproc" }
