[package]
name = "lalrproc"
version = "0.0.5"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Procedural macro built on LALRPOP"
repository = "https://github.com/dtolnay/lalrproc"
documentation = "https://github.com/dtolnay/lalrproc"
build = "build.rs"
readme = "README.md"

[lib]
proc-macro = true

[build-dependencies]
lalrpop = "0.19"

[dependencies]
lalrpop-util = "0.19"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
