[package]
name = "lalrproc"
version = "0.0.7"
authors = ["David Tolnay <dtolnay@gmail.com>"]
description = "Procedural macro built on LALRPOP"
documentation = "https://github.com/dtolnay/lalrproc"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/lalrproc"

[lib]
proc-macro = true

[build-dependencies]
lalrpop = "0.19"

[dependencies]
lalrpop-util = "0.19"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
